# dados_sms-jupter

./: DATA_ORIGIN.xlsx  Dados finais.xlsx  analise_ponto.ipynb  pyproject.toml
